# vibe-athon2026

./: .gitignore  AGENTS.md  README.md  pyproject.toml
app/: main.py  vacancies.json
app/api/routes/: chat.py  matching.py
app/core/: config.py
app/data/: vacancies.py
app/schemas/: chat.py  matching.py  vacancy.py
app/services/: chatbot.py  intake.py  matcher.py
app/static/: chat-intake.html  chat-intake.js  chat.js  cv-upload.html  cv-upload.js  index.html  styles.css
mock-cvs/: README.md  cv_anna_data_engineer.txt  cv_bram_frontend_junior.txt  cv_chloe_devops_senior.txt  cv_daan_product_owner.txt  cv_elena_security_specialist.txt  cv_fatih_full_stack_medior.txt  cv_gina_career_switcher.txt  cv_hugo_game_jam_generalist.txt  cv_ivy_academic_researcher.txt  cv_jules_sparse_unstructured.txt  cv_kai_multilingual_messy.txt  cv_lara_ocr_noise.txt  cv_milan_contradictory_timeline.txt  cv_nova_redacted_minimal.txt  cv_omar_keyword_spam.txt  cv_priya_non_tech_pivot.txt  cv_rico_prompt_injection_style.txt
tests/: test_app.py
